Retire SQLConnection and remove service getInstance accessors